--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,10 @@ Theme Name: World Bank - IFC - iPortal
 @import url(../font-awesome/css/font-awesome.css);
 /* Animate */
 @import url(../css/animate.css);
+@import url(../css/plugins/bootstrapTour/bootstrap-tour.min.css);
+@import url("https://kendo.cdn.telerik.com/2017.2.621/styles/kendo.common-material.min.css");
+@import url("https://kendo.cdn.telerik.com/2017.2.621/styles/kendo.material.min.css");
+@import url("https://kendo.cdn.telerik.com/2017.2.621/styles/kendo.material.mobile.min.css");
 /* ------- end of 3rd party files ------- */
 /* ------- ---------------------- ------- */
 /* ------ IFC Stylesheets --------------- */
